<resources>
    <string name="app_name">IChat</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login_title">Login</string>
    <string name="login_text_view_show">OR</string>
    <string name="login_button_login_google_title">Login with Google</string>
    <string name="error_not_empty">This field can not empty</string>
    <string name="login_check_box_title">Remember me</string>
    <string name="login_text_view_register_title">New account ? Register</string>
    <string name="registration_name_hint">Name</string>
    <string name="action_sign_up">sign up</string>
    <string name="progress_loading">Loading...</string>
    <string name="error_required">Required.</string>
    <string name="display_last_message_of_user">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium dolorem..</string>
    <string name="display_name_user">Display name user</string>
    <string name="description_image_avatar">avatar</string>
    <string name="login_failed">Login failed. Please check your email and password</string>
    <string name="title_home">HOME</string>
    <string name="title_search">Search</string>
    <string name="msg_create_account_success">Create account success !</string>
    <string name="msg_create_account_failed">Create account failed !</string>
    <string name="server_client_id">795947311906-1si6nnr54mf7gjctql9hqi064noethb6.apps.googleusercontent.com</string>
    <string name="login_error_system">The system is busy. Please come back later !</string>
    <string name="profile_button_edit">Update info</string>
    <string name="profile_button_sign_out">Sign out</string>
    <string name="msg_set_information_failed">Set Information failed, update your infomation in profile screen!!</string>
    <string name="profile_text_sign_in_title">Last SingIn:</string>
    <string name="msg_get_data_failed">An error occurred, please try again !</string>
    <string name="dialog_nagative_button">No</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="msg_delete_conversation">Delete conversation ?</string>
    <string name="msg_delete_conversation_failed">Delete conversation failed! Please try again!!</string>
    <string name="msg_delete_conversation_success">Delete conversation success!</string>
    <string name="msg_create_private_room_failed">Create private room failed! Please try again!!</string>
    <string name="msg_create_private_room_success">Create private room success!</string>
    <string name="msg_create_public_room_failed">Create public room failed! Please try again!!</string>
    <string name="msg_create_public_room_success">Create public room success!</string>
    <string name="title_confirm_delete">Confirm Delete</string>
    <string name="profile_text_full_name">Full name :</string>
    <string name="profile_text_image">Image :</string>
    <string name="profile_full_name_hint">Full name</string>
    <string name="dialog_profile_button_gallery_title">Gallery</string>
    <string name="dialog_profile_button_camera_title">Camera</string>
    <string name="dialog_profile_button_update_title">Update</string>
    <string name="dialog_text_header_title">Update Information</string>
    <string name="profile_permission_error">You must grant permission for this action</string>
    <string name="profile_edit_fail">Edit profile fail</string>
    <string name="chat_screen_content">chat screen</string>
    <string name="chat_message_hint">Reply</string>
    <string name="char_comma">,</string>
    <string name="chat_error_message_empty">The message\'s content is not empty !</string>
    <string-array name="title_tab_home">
        <item>Private</item>
        <item>Online</item>
        <item>Public</item>
    </string-array>
</resources>
