<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.constraint.Guideline
        android:id="@+id/guide_line_top"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/profile_text_full_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_dialog" />

    <TextView
        android:id="@+id/text_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/profile_text_image"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <TextView
        android:id="@+id/text_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/dialog_text_header_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line_top" />

    <EditText
        android:id="@+id/edit_text_dialog"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@color/color_light_gray"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_update_title" />

    <EditText
        android:id="@+id/edit_pro_user_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:hint="@string/profile_full_name_hint"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_user_name"
        app:layout_constraintTop_toTopOf="@+id/edit_text_dialog" />

    <Button
        android:id="@+id/button_choose_gallery"
        style="@style/ButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableTop="@drawable/ic_collections"
        android:text="@string/dialog_profile_button_gallery_title"
        app:layout_constraintEnd_toStartOf="@+id/button_choose_camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/text_image"
        app:layout_constraintTop_toBottomOf="@+id/edit_pro_user_name" />

    <Button
        android:id="@+id/button_choose_camera"
        style="@style/ButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:drawableTop="@drawable/ic_photo_camera"
        android:text="@string/dialog_profile_button_camera_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_choose_gallery"
        app:layout_constraintTop_toBottomOf="@+id/edit_pro_user_name" />

    <ImageView
        android:id="@+id/image_dialog_avatar"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choose_gallery"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

    <Button
        android:id="@+id/button_update"
        style="@style/ButtonProfile"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@color/color_medium_blue"
        android:text="@string/dialog_profile_button_update_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_dialog_avatar" />
</android.support.constraint.ConstraintLayout>
